[gd_scene load_steps=2 format=3 uid="uid://by88pw061yibu"]

[ext_resource type="Script" uid="uid://oyugoy3v1wy" path="res://node_chat/welcome/tscn/config_section.gd" id="1_t63nv"]

[node name="ConfigSection" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_t63nv")

[node name="SectionName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "设置一节名称"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="add_pos" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
